<resources>
    <string name="app_name">MyRuns</string>
    <string name="nameViewText">Name: </string>
    <string name="emailViewText">"Email: "</string>
    <string name="phoneNumberViewText">"Phone Number: "</string>
    <string name="genderViewText">"Gender: "</string>
    <string name="majorViewText">"Major: "</string>
    <string name="nameHint">eg. Ayush Arora</string>
    <string name="emailHint">eg. ayusharora@xyz.com</string>
    <string name="phoneNumberHint">eg. 111-222-3456</string>
    <string name="femaleRadioButton">Female</string>
    <string name="maleRadioButton">Male</string>
    <string name="majorHint">eg. computing science</string>
    <string name="button1">SAVE</string>
    <string name="button2">CANCEL</string>
    <string name="photoViewText">"Profile Photo: "</string>
    <string name="cameraButtonText">CHANGE</string>
    <string name="classViewText">"Class: "</string>
    <string name="classHint">eg. 2023</string>
</resources>